--- a/mypage/webapp/manifest.json
+++ b/mypage/webapp/manifest.json
@@ -14,6 +14,16 @@
       "id": "@sap/generator-fiori:basic",
       "version": "1.19.5",
       "toolsId": "bccb6d56-748b-4294-aa8c-c653abed64ae"
+    },
+    "dataSources": {
+      "linksJson": {
+        "uri": "model/links.json",
+        "type": "JSON"
+      },
+      "educationJson": {
+        "uri": "model/education.json",
+        "type": "JSON"
+      }
     }
   },
   "sap.ui": {
@@ -51,6 +61,14 @@
         "settings": {
           "bundleName": "mypage.i18n.i18n"
         }
+      },
+      "links": {
+        "type": "sap.ui.model.json.JSONModel",
+        "dataSource": "linksJson"
+      },
+      "education": {
+        "type": "sap.ui.model.json.JSONModel",
+        "dataSource": "educationJson"
       }
     },
     "resources": {
