--- a/mypage/webapp/manifest.json
+++ b/mypage/webapp/manifest.json
@@ -52,7 +52,9 @@
       "minUI5Version": "1.120.0",
       "libs": {
         "sap.m": {},
-        "sap.ui.core": {}
+        "sap.ui.core": {},
+        "sap.ui.suite.ui.commons": {},
+        "sap.uxap": {}
       }
     },
     "contentDensities": {
